--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     <li><a href="#">SA2</a></li>
   </ul>
 
+  <!-- parallax code from: http://materializecss.com/parallax.html -->
+  <div class="parallax-container">
+    <div class='parallax'><img src='img/p1.jpg'></div>
+  </div>
+
   <div class='section-white'>
     <br />
     <h1 class="header center orange-text">Hi CS52!</h1>
@@ -95,6 +100,10 @@
     </div>
   </div>
 
+  <!-- parallax code from: http://materializecss.com/parallax.html -->
+  <div class="parallax-container">
+    <div class='parallax'><img src='img/p2.jpg'></div>
+  </div>
 
   <footer class="page-footer orange">
     <div class="container">
