personalizing the buttons

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             <div class="icon-block">
               <h5 class="center">Add some effects.</h5>
               <p class="light">Make some buttons look cool! And by that I mean Button 1, Button 2, and Button 3.</p>
-              <a class="btn-floating waves-effect waves-light cyan">
-                <i class="material-icons">add</i>
+              <a class="btn waves-effect waves-light cyan">
+                <i class="material-icons left">add</i>
+                Button 2
               </a>
             </div>
           </div>
@@ -78,7 +79,7 @@
             <div class="icon-block">
               <h5 class="center">Add a modal.</h5>
               <p class="light">Materialize makes it easy to do so, don't worry.</p>
-              <a class="btn btn-floating pulse" href="#getStartedModal">
+              <a class="btn-floating pulse" href="#getStartedModal">
                 <i class="material-icons">cloud</i>
               </a>
               <!-- get example info from: http://materializecss.com/modals.html -->
